maybe fix modal icon mobile

--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -135,8 +135,8 @@ p > a {
   }
 
   .titanic-menu-close {
-    top: 5px;
-    right: 5px;
+    top: 20px;
+    right: -40px;
     margin: 0px
   }
 }
